--- a/App/Views/Client/Home.html
+++ b/App/Views/Client/Home.html
@@ -16,10 +16,101 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="/PC08899_Nguyentrungsang_DAM/PC08899_Nguyentrungsang_DAM/public/assets/client/css/style.css">
+        <link rel="stylesheet" href="/public/assets/client/css/style.css">
     </head>
 
     <body>
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img height="650px" width="200px"  src="img/Diamond_1124_MCBooks_Resize_Slide_840x320.webp" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img height="650px" width="200px" src="img/TrangCTT11_1124_Mainbanner_840x320.webp" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img height="650px" width="200px"  src="img/TrangBlindBox_SlideBanner_840x320.webp" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        <!-- Category Sections -->
+         <div class="container">
+            <div class="categories">
+                <div class="category">
+                    <img src="img/SmallBanner_T11_310X210.webp" alt="Law Books">
+                   
+                    
+                </div>
+                <div class="category">
+                    <img src="img/SmallBanner_T11_maytinh_smallbanner_310x210.webp" alt="Calculators">
+                    
+                 
+                </div>
+                <div class="category">
+                    <img src="img/TrangCTT11_1124_Tusachphapluat_Resize_310x210.webp" alt="Games">
+                    
+                    
+                </div>
+                <div class="category">
+                    <img src="img/TrangDenBan_310x210.webp" alt="LED Lights">
+                   
+                   
+                </div>
+            </div>
+        
+           
+         <div class="icons-section">
+            <div class="icon-box">
+                <img src="img/Icon_VanHoc_1.webp" alt="Tủ Sách Pháp Luật">
+                <p>Tủ Sách Pháp Luật</p>
+            </div>
+            <div class="icon-box">
+                <img src="img/IconT9_Logo NCC_MCBooks_120x120.webp" alt="MCBooks">
+                <p>MCBooks</p>
+            </div>
+            <div class="icon-box">
+                <img src="img/Icon_MaGiamGia_8px_1.webp" alt="Kinh Tế">
+                <p>Mã giảm giá</p>
+            </div>
+            <div class="icon-box">
+                <img src="img/icon_ManngaT06.webp" alt="Manga">
+                <p>Manga</p>
+            </div>
+
+            <div class="icon-box">
+                <img src="img/Icon_FlashSale_Thuong_120x120.webp" alt="Flasa sale">
+                <p>Flasa sale</p>
+            </div>
+            <div class="icon-box">
+                <img src="img/ChoDoCu.webp" alt="Phiên chợ cũ">
+                <p>Phiên chợ cũ</p>
+            </div>
+            <div class="icon-box">
+                <img src="img/Icon_SanPhamMoi_8px_1.webp" alt="Sản phẩm mới">
+                <p>Sản phẩm mới</p>
+            </div>
+            <div class="icon-box">
+                <img src="img/Icon_VanHoc_1.webp" alt="Manga">
+                <p>Manga</p>
+            </div>
+            
+           
+        </div>
+        
+    
+    
+    
+    
+   
+</div>
         
 <aside class="container col-md-12">
     <!-- Navbar -->
