--- a/public/assets/client/css/style.css
+++ b/public/assets/client/css/style.css
@@ -771,3 +771,134 @@ footer .social-icons a:hover {
         transform: translateY(-10px);
         transition: transform 0.3s;
     }
+
+    .banner {
+        width: 90%;
+        background-color: #d41b1b;
+        color: white;
+        text-align: center;
+        padding: 20px;
+        margin-top: 20px;
+        border-radius: 10px;
+        position: relative;
+    }
+    
+    .banner h2 {
+        font-size: 24px;
+    }
+    
+    .discount {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        font-size: 32px;
+        background-color: #ffffff33;
+        padding: 10px;
+        border-radius: 10px;
+    }
+    
+    .books {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        margin-top: 10px;
+    }
+    
+    .books img {
+        width: 80%;
+        height: 80%;
+        border-radius: 5px;
+        /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); */
+    }
+    
+    .categories {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 20px;
+        /* width: 90%; */
+    }
+    
+    .category {
+        background-color: white;
+        text-align: center;
+        padding: 15px;
+        border-radius: 10px;
+        width: 25%;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    }
+    
+    .category img {
+        width: 100%;
+        border-radius: 5px;
+    }
+    
+    .category p {
+        margin: 10px 0;
+        font-weight: bold;
+    }
+    
+    .category button {
+        background-color: #d41b1b;
+        color: white;
+        border: none;
+        padding: 8px 12px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    
+    .category button:hover {
+        background-color: #b31818;
+    }
+    
+    /* .nav-icons {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 10px;
+        width: 90%;
+        margin-top: 20px;
+    } */
+    
+    /* .icon {
+        background-color: white;
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        font-size: 14px;
+        text-align: center;
+        width: 90px;
+    } */
+    .nav-icons {
+       
+       align-items: center;
+       
+        
+    }
+    
+    .nav-icons-item {
+        
+        display: grid;
+        grid-template-columns: 1fr 4;
+    
+    }
+    
+    .icons-section {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-top: 20px;
+    }
+    .icon-box {
+        background: #fff;
+        padding: 15px;
+        width: 22%;
+        text-align: center;
+        margin: 10px 0;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    .icon-box img {
+        max-width: 50px;
+        margin-bottom: 10px;
+    }
