--- a/public/assets/client/css/style.css
+++ b/public/assets/client/css/style.css
@@ -170,12 +170,9 @@ h6,
 
 /*** Carousel ***/
 .carousel-caption {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+
     background: rgba(9, 30, 62, .7);
-    z-index: 1;
+
 }
 
 @media (max-width: 576px) {
@@ -204,7 +201,6 @@ h6,
 
 /*** Section Title ***/
 .section-title::before {
-    position: absolute;
     content: "";
     width: 150px;
     height: 5px;
@@ -225,7 +221,6 @@ h6,
 }
 
 .section-title::after {
-    position: absolute;
     content: "";
     width: 6px;
     height: 5px;
@@ -585,7 +580,7 @@ aside {
 marquee {
     font-weight: bolder;
 }
-
+/* 
 .slider-container {
     position: relative;
     overflow: hidden;
@@ -625,11 +620,39 @@ marquee {
 
 #next {
     right: 10px;
-}
+} 
 
 .control-btn:hover {
     background-color: rgba(255, 255, 255, 0.5);
+}*/
+/* Đảm bảo carousel không nhấp nháy */
+#header-carousel .carousel-item {
+    opacity: 0;
+    transition: opacity 1s ease-in-out; /* Thời gian fade */
 }
+
+#header-carousel .carousel-item.active {
+    opacity: 1;
+}
+
+.carousel-fade .carousel-item-next, .carousel-item-prev, .carousel-item.active {
+    opacity: 1;
+}
+
+.carousel-fade .carousel-item-next, .carousel-fade .carousel-item-prev {
+    opacity: 0;
+    transform: translateX(0);
+}
+
+.carousel-item {
+    width: 100%;
+    height: 100%;
+    transition: opacity 1s ease-in-out; /* Điều chỉnh độ mượt mà khi chuyển slide */
+}
+
+/* Đảm bảo không có chuyển động mạnh, chỉ mờ dần */
+
+
 
 .my-5 {
     position: relative;
@@ -644,6 +667,7 @@ marquee {
     }
 
 }
+
 
 
 .row {
