--- a/public/assets/client/css/footer.css
+++ b/public/assets/client/css/footer.css
@@ -1,22 +1,6 @@
-.container {
-     max-width: 1170px;
-}
-
-html {
-     scroll-behavior: smooth;
-}
-
-body {
-     color: #666666;
-     font-size: 14px;
-     font-family: 'Lato', sans-serif;
-     line-height: 1.80857;
-     font-weight: normal;
-}
-
 
 /*font-family: 'Roboto', sans-serif;*/
-
+footer{
 a {
      color: #1f1f1f;
      text-decoration: none !important;
@@ -208,6 +192,7 @@ ul.social_icon li a i:hover {
      a:hover {
           color: #de0000;
      }
+}
 }
 
 
