--- a/public/assets/client/css/style.css
+++ b/public/assets/client/css/style.css
@@ -2178,6 +2178,9 @@ ul.social_icon {
                color: #021626;
                transition: ease-in all 0.5s;
           }
+          a{
+            text-decoration: none;
+          }
      }
 }
 
@@ -2200,12 +2203,15 @@ ul.social_icon li a i:hover {
           padding-top: 25px;
           border-top: #606060 solid 1px;
           font-weight: normal;
+         
      }
      a {
           color: #fff;
+          text-decoration: none;
      }
      a:hover {
           color: #de0000;
+          text-decoration: none;
      }
 }
 
